<resources>
    <string name="app_name">FoodApp</string>
    <string name="veg">Veg</string>
    <string name="food_item_image_here">Food Item Image Here</string>
    <string name="some_description_of_this_item">Some description of this item.</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="item_name_here">Item Name Here</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="remove_item">Remove Item</string>
    <string name="update_cart">Update Cart</string>
    <string name="select_locality">Select Locality</string>
    <string name="mode_of_payment">Mode of Payment</string>
    <string name="address">Address</string>
    <string name="available">Available</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="item_image">Item Image</string>
    <string name="history">History</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="johndoe_abc_com">johndoe@abc.com</string>
    <string name="avatar">Avatar</string>
    <string name="_2017">© 2017</string>
    <string name="not_yet_delivered">Not Yet Delivered</string>
</resources>
