<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_food_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wordpress.sreeharilive.foodapp.activity.FoodDescriptionActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerInside"
        android:contentDescription="@string/food_item_image_here"
        android:id="@+id/foodItemImageView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Item Name Here"
        android:id="@+id/itemNameTextView"
        android:layout_below="@id/foodItemImageView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemNameTextView"
        android:id="@+id/foodItemDescriptionTextView"
        android:text="@string/some_description_of_this_item"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/foodItemDescriptionTextView"
        android:id="@+id/foodQuantitySpinner"
        android:layout_marginTop="8dp"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:onClick="addItemToCart"/>



</RelativeLayout>
