<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/icons">

        <ScrollView
            android:id="@+id/drawerScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/avatar"
                    android:id="@+id/avatarImageView"
                    android:src="@drawable/avatar_1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:id="@+id/emailIdTextView"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/johndoe_abc_com"/>


                <!--header
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="70dp"
                    android:background="@color/colorBlack"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingEnd="0dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:paddingStart="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="shareAll"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:srcCompat="@drawable/shareicon" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:background="@color/colorBlack"
                            android:gravity="center"
                            android:text="Share It"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />
                    </LinearLayout>


                    &lt;!&ndash; share icons &ndash;&gt;
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBlack"
                        android:orientation="horizontal"
                        android:layout_marginLeft="46dp"
                        android:layout_marginStart="46dp"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:weightSum="4">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="shareFacebook"
                            android:scaleType="fitStart"
                            app:srcCompat="@drawable/fb" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:scaleType="fitStart"
                            android:onClick="shareTwitter"
                            app:srcCompat="@drawable/twiter" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="shareWhatsApp"
                            android:scaleType="fitStart"
                            app:srcCompat="@drawable/watsapp" />

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="shareGooglePlus"
                            android:scaleType="fitStart"
                            app:srcCompat="@drawable/googleplus" />

                    </LinearLayout>

                </LinearLayout>-->

                <!--menu-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="10dp">


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/divider"/>

                    <!--message us
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="launchMessageUs"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/message" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:gravity="center"
                            android:text="Message Us"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                    </LinearLayout>-->

                    <!--Rate us
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="launchRateUs"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/rateus" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:gravity="center"
                            android:text="Rate Us"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                    </LinearLayout>-->

                    <!--about us
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="launchAboutUs"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/aboutus" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:gravity="center"
                            android:text="About Us"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                    </LinearLayout>-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="launchHistory"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_history_grey_35dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginStart="20dp"
                            android:gravity="center_vertical"
                            android:text="@string/history"
                            android:drawableEnd="@drawable/ic_chevron_right_grey_24dp"
                            android:drawableRight="@drawable/ic_chevron_right_grey_24dp"
                            android:textColor="@color/secondary_text"
                            android:textSize="18sp" />

                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/divider"/>


                </LinearLayout>

            </LinearLayout>

        </ScrollView>


        <!--copyright-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/_2017"
            />

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
